Completed the first landing image you see when entering the chas homepage. Implemtning both grid and flex.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,29 @@
   <body>
     <div class="top">
       <header>
-        <div>Logga</div>
+        <div class="logo"></div>
         <nav>
-          <a>Yh-Program</a>
-          <a>ChasUpskill</a>
+          <a>YH-utbildningar ▿</a>
+          <a>Studera hos oss ▿</a>
+          <a>ChasUpskill ▿</a>
+          <a>För företag ▿</a>
+          <a>Om oss ▿</a>
+          <a>Aktuellt </a>
+          <button class="button1">ANSÖK</button>
         </nav>
       </header>
       <div class="hero">
-        <h1>Chas Academy - Steget närmare en karriär inom IT</h1>
-        <h2>
-          Chas Academy är en yrkeshögskola som förbereder dig för ett arbetsliv
-          inom IT. Vill du vara med på resan till världens bästa bransch?
-        </h2>
+        <h1>CHAS ACADEMY -</h1>
+        <h1>STEGET NÄRMARE EN</h1>
+        <h1>KARRIÄR INOM IT</h1>
+        <br />
+        <br />
+        <h2>CHAS ACADEMY ÄR EN YRKESHÖGSKOLA</h2>
+        <h2>SOM FÖRBEREDER DIG FÖR ETT</h2>
+        <h2>ARBETSLIV INOM IT.VILL DU VARA MED</h2>
+        <h2>PÅ RESAN TILL VÄRLDENS BÄSTA</h2>
+        <h2>BRANSCH?</h2>
+        <button class="button2">↓</button>
       </div>
     </div>
   </body>
