made the second slide for the website. Also did some tweaks on the first page navbar. Also did some drills in /gridd.

--- a/index.html
+++ b/index.html
@@ -34,5 +34,26 @@
         <button class="button2">↓</button>
       </div>
     </div>
+    <div class="secondHeader">
+      <div class=" gridItems gridItem1"></div>
+      <div class=" gridItems gridItem2">
+     
+          <h2>LÄR KÄNNA OSS</h2>
+          <h1>CHAS ACADEMY</h1>
+          <h4>
+            Vi kan IT! Och snart kan du också det. Med pedagogik och kunskap
+            stöttar våra branschledande huvudlärare våra studerande i resan från
+            drömjobb till verklighet. Här på Chas Academy är vi ett
+            sammansvetsat gäng som drivs av samma mål - att skapa den bästa
+            yrkeshögskolan med moderna IT-utbildningar som leder till en ny
+            karriär. Som del av det ledande bolaget inom IT, Chas Visual
+            Management, har vi över 10 års branscherfarenhet i ryggen och ett
+            engagerat nätverk vid vår sida. Välkommen att joina oss på Chas
+            Academy!
+          </h4>
+          <button class="button3">ANSÖK DIREKT</button>
+          <button class="button4">LÄS MER OM OSS</button>
+    </div>
+   
   </body>
 </html>
