--- a/gridd/index.html
+++ b/gridd/index.html
@@ -12,11 +12,11 @@
         <h1>1</h1>
         I'm an Otaku bestie 미쳐 that candy's sassy
       </div>
-      <div class="gridItem">
+      <div class="gridItem gridItem2">
         <h1>2</h1>
         I'm an Otaku bestie 미쳐 that candy's sassy
       </div>
-      <div class="gridItem">
+      <div class="gridItem3">
         <h1>3</h1>
         I'm an Otaku bestie 미쳐 that candy's sassy
       </div>
